third_party/move/move-compiler-v2/tests/ability-check/loop_abort.exp

Diagnostics:
error: local `_x` of type `Test::Impotent` does not have the `drop` ability
   ┌─ tests/ability-check/loop_abort.move:11:18
   │
11 │         let _x = Impotent {};
   │                  ^^^^^^^^^^^ implicitly dropped here since it is no longer used
